--- a/index.html
+++ b/index.html
@@ -16,17 +16,12 @@
   <!-- TailwindCSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- html2pdf for client-side PDF -->
-  <script src="https://cdn.jsdelivr.net/npm/html2pdf.js@0.10.1/dist/html2pdf.bundle.min.js"></script>
-
   <style>
     :root{
       --sbx-blue:#2563eb;
       --sbx-blue-hover:#1d4ed8;
       --sbx-ink:#111827;
       --sbx-bg:#f9fafb;
-      --sbx-card:#ffffff;
-      --sbx-border:#e5e7eb;
     }
     body {
       font-family: 'Montserrat', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
@@ -39,22 +34,11 @@
     .sbx-btn-dark { background-color: var(--sbx-ink); color:#fff; transition: background-color .2s ease; }
     .sbx-btn-dark:hover { background-color:#000; }
 
-    /* A4 sheet (used for both Print and PDF render target) */
-    /* 794px ≈ 210mm @ 96dpi; inner on print we clamp to 190mm within 12mm margins */
-    #invoice-sheet {
-      width: 794px;
-      background: #ffffff;
-      margin: 0 auto;
-      box-shadow: none;
-    }
-
-    /* Print: show ONLY the invoice sheet, lock to single A4 page */
+    /* Print only the invoice area */
     @media print {
-      @page { size: A4; margin: 12mm; }
-      html, body { height: auto !important; }
       body * { visibility: hidden !important; }
-      #invoice-sheet, #invoice-sheet * { visibility: visible !important; }
-      #invoice-sheet { position: absolute; left: 0; top: 0; width: 190mm; } /* inner width fits one page */
+      #printable, #printable * { visibility: visible !important; }
+      #printable { position: absolute; left: 0; top: 0; width: 100%; padding: 0 !important; margin: 0 !important; box-shadow: none !important; }
       table, tr, td, th { page-break-inside: avoid !important; }
     }
   </style>
@@ -71,8 +55,6 @@
       const n = parseFloat(String(v || "").replace(/,/g, ""));
       return isFinite(n) ? Math.max(0, n) : 0;
     };
-
-    const VAT_RATE = 0.2;
 
     const Badge = ({children}) => (
       <span className="inline-flex items-center rounded-full bg-blue-50 px-3 py-1 text-xs font-semibold text-blue-700 ring-1 ring-inset ring-blue-200">
@@ -135,9 +117,9 @@
       const materialsVal = React.useMemo(()=>clampMoney(materials), [materials]);
       const otherVal = React.useMemo(()=>clampMoney(other), [other]);
 
-      // Rules
-      const drcApplies = withinCIS && youVat && customerVat && !endUser;   // DRC only possible within CIS
-      const chargeVat = youVat && !drcApplies;                              // Only charge VAT if you’re VAT-registered and DRC doesn’t apply
+      // VAT / DRC rules
+      const drcApplies = withinCIS && youVat && customerVat && !endUser;
+      const chargeVat  = youVat && !drcApplies;
 
       const subtotal = labourVal + materialsVal + otherVal;
       const vatAmount = chargeVat ? subtotal * 0.2 : 0;
@@ -147,6 +129,22 @@
       const cisDeduction = withinCIS ? (labourVal * cisRate) : 0;
       const expectedTakeHome = totalToInvoice - cisDeduction;
       const drcCustomerVatInfo = drcApplies ? subtotal * 0.2 : 0;
+
+      // Iframe auto-resize for Duda: send height on load/changes/step
+      const sendHeight = React.useCallback(() => {
+        const h = document.documentElement.scrollHeight || document.body.scrollHeight;
+        window.parent?.postMessage({ type: 'SBX_IFRAME_HEIGHT', height: h }, '*');
+      }, []);
+      React.useEffect(() => {
+        const ro = new ResizeObserver(sendHeight);
+        ro.observe(document.body);
+        window.addEventListener('load', sendHeight);
+        const t = setInterval(sendHeight, 1000);
+        const onMsg = (e)=>{ if(e.data && e.data.type==='SBX_REQUEST_HEIGHT') sendHeight(); };
+        window.addEventListener('message', onMsg);
+        return () => { ro.disconnect(); clearInterval(t); window.removeEventListener('load', sendHeight); window.removeEventListener('message', onMsg); };
+      }, [sendHeight]);
+      React.useEffect(() => { sendHeight(); }, [step, sendHeight]);
 
       const reset = () => {
         setStep(1);
@@ -184,28 +182,7 @@
         "Waste Removal / Skip","Other…"
       ];
 
-      // --- PDF: render ONLY the white A4 sheet ---
-      const downloadPDF = async () => {
-        const el = document.getElementById('invoice-sheet');
-        if (!el) return;
-        const fileName = `Invoice-${(invNo || '').replace(/[^A-Za-z0-9-_]/g,'') || 'SBX'}.pdf`;
-        await html2pdf().set({
-          margin: 12,                                           // mm (matches print)
-          filename: fileName,
-          image: { type: 'jpeg', quality: 0.98 },
-          html2canvas: {
-            scale: 2,
-            useCORS: true,
-            backgroundColor: '#ffffff',
-            windowWidth: el.scrollWidth || 794,                // ensure correct layout width
-            letterRendering: true
-          },
-          jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' },
-          pagebreak: { mode: ['avoid-all','css','legacy'] }
-        }).from(el).save();
-      };
-
-      // Open a short email draft (user attaches PDF they just downloaded)
+      // Email draft (manual attach)
       const openEmailDraft = () => {
         const subject = `Invoice ${invNo || ""} from ${fromName || "Subcontractor"}`.trim();
         const body = `Hi,\n\nPlease find attached invoice ${invNo || ""} dated ${invDate || ""}.\n\nRegards,\n${fromName || ""}`;
@@ -269,7 +246,7 @@
                   <label className="flex items-center gap-2"><input type="radio" name="endUser" checked={endUser} onChange={()=>setEndUser(true)} /> Yes (they use/own the building)</label>
                   <label className="flex items-center gap-2"><input type="radio" name="endUser" checked={!endUser} onChange={()=>setEndUser(false)} /> No (contractor/another sub)</label>
                 </div>
-                <p className="text-xs text-gray-500">End Users <b>do not</b> get reverse charge; you charge VAT as normal.</p>
+                <p className="text-xs text-gray-500">End Users do not get reverse charge; you charge VAT as normal.</p>
               </div>
 
               <div className="md:col-span-2 flex justify-between">
@@ -420,7 +397,7 @@
                     <button className="px-3 py-2 rounded-lg bg-white border border-gray-200" onClick={copyLines}>Copy invoice lines</button>
                   </div>
                   <div className="text-xs text-gray-500 mt-3">
-                    Download the PDF below, then attach it to your email.
+                    Print or email from the invoice panel.
                   </div>
                 </div>
               </div>
@@ -472,13 +449,12 @@
                   </div>
                 </div>
 
-                {/* Invoice (printable container) */}
-                <div className="bg-white rounded-2xl shadow p-6 border border-gray-100" id="printable">
-                  <h2 className="text-lg font-semibold mb-3">Invoice</h2>
+                {/* Invoice (printable) */}
+                <div>
+                  <div className="bg-white rounded-2xl shadow p-6 border border-gray-100" id="printable">
+                    <h2 className="text-lg font-semibold mb-3">Invoice</h2>
 
-                  <!-- Fixed-width white A4 sheet: this is the only element used for Print/PDF -->
-                  <div id="invoice-sheet">
-                    <div className="p-6">
+                    <div className="rounded-2xl border border-gray-200 p-6 bg-white">
                       <div className="flex items-start justify-between mb-4">
                         <div>
                           <h3 className="text-lg font-semibold">INVOICE</h3>
@@ -582,14 +558,11 @@
                       </div>
                     </div>
                   </div>
-                  <!-- /#invoice-sheet -->
 
                   <div className="mt-3 flex flex-wrap gap-3">
-                    <button className="px-4 py-2 rounded-lg sbx-btn" onClick={downloadPDF}>Download PDF</button>
                     <button className="px-4 py-2 rounded-lg bg-white border border-gray-200" onClick={()=>window.print()}>Print</button>
                     <button className="px-4 py-2 rounded-lg sbx-btn-dark" onClick={openEmailDraft}>Open email draft</button>
                   </div>
-                  <p className="text-xs text-gray-500 mt-2">Attach the downloaded PDF to your email.</p>
                 </div>
               </div>
             </div>
